RESOLVED FIXED246122
REGRESSION(254760@main): mobile version of apple.com/iphone-14 doesn't display
https://bugs.webkit.org/show_bug.cgi?id=246122
Summary REGRESSION(254760@main): mobile version of apple.com/iphone-14 doesn't display
Tim Nguyen (:ntim)
Reported 2022-10-05 16:30:43 PDT
Attachments
Tim Nguyen (:ntim)
Comment 1 2022-10-05 16:54:04 PDT
Antoine Quint
Comment 2 2022-10-06 01:10:35 PDT
Antoine Quint
Comment 3 2022-10-06 01:24:22 PDT
EWS
Comment 4 2022-10-06 07:00:54 PDT
Committed 255216@main (3a3a97e3b214): <https://commits.webkit.org/255216@main> Reviewed commits have been landed. Closing PR #5072 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.